Track bounding boxes for each layer

--- a/client/screens/instance_annotator_screen.kv
+++ b/client/screens/instance_annotator_screen.kv
@@ -190,7 +190,7 @@
 <DrawableLayer>:
     col: self.col
     fbo: self.fbo
-    canvas:
+    canvas.before:
         Color:
             rgba: root.col
 
