--- a/client/screens/instance_annotator_screen.kv
+++ b/client/screens/instance_annotator_screen.kv
@@ -28,7 +28,8 @@
 
 <LeftControlColumn>:
     tool_select: tool_select
-    color_picker: color_picker
+    class_picker: class_picker
+    layer_view: layer_view
     orientation: "vertical"
     canvas:
         Color:
@@ -41,9 +42,10 @@
         size_hint_y: 400 / root.height
 
     ClassPicker:
-        id: color_picker
+        id: class_picker
         size_hint_y: 400 / root.height
     LayerView:
+        id: layer_view
 
 <ToolSelect>:
     cols: 1
@@ -105,15 +107,61 @@
     size_hint_y: None
     height: 50
     text: self.class_name
-    on_release: app.root.current_screen.left_control.tool_select.set_color(self.class_color)
+    on_release: app.root.current_screen.left_control.class_picker.change_class(root)
 
 <LayerView>:
+    layer_item_list: layer_item_list
+    cols: 1
     Button:
+        size_hint_y: None
+        height: 50
+        text: "Add Layer"
+        on_release: app.root.current_screen.image_canvas.layer_stack.add_layer()
+    ScrollView:
+        GridLayout:
+            cols: 1
+            size_hint_y: None
+            height: self.minimum_height
+            id: layer_item_list
+
+<LayerViewItem>:
+    layer_name: self.layer_name
+    mask_enabled: self.mask_enabled
+    bbox_enabled: self.bbox_enabled
+    layer_index: self.layer_index
+    height: 50
+    size_hint_y: None
+    Button:
+        size_hint: (1,1)
+        on_release: root.select_layer()
+    BoxLayout:
+        size_hint: (1, 1)
+        pos_hint: {'center_x': .5, 'center_y': .5}
+        padding: 8
+        spacing: 8
+        Button:
+            text: "M" * root.mask_enabled
+            size_hint_x: None
+            width: self.height
+            on_release: root.toggle_mask()
+        Button:
+            text: "B" * root.bbox_enabled
+            size_hint_x: None
+            width: self.height
+            on_release: root.toggle_bbox()
+        Label:
+            text: root.layer_name
+            halign: 'left'
+            valign: 'center'
+            text_size: self.size
+
+
 
 <ImageCanvas>:
     image: image
-    drawable_layer: drawable_layer
+    layer_stack: layer_stack
     draw_tool: draw_tool
+    scroll_view: scroll_view
     canvas:
         Color:
             rgba: 0.8, 0.8, 0.8, 0.8
@@ -121,6 +169,7 @@
             pos: self.pos
             size: self.size
     ScrollView:
+        id: scroll_view
         size: root.size
         Image:
             id: image
@@ -128,19 +177,50 @@
             size: root.size
             pos: root.pos
             size_hint:(None, None)
-            opacity: 1.0
             FloatLayout:
                 DrawTool:
                     id: draw_tool
-                DrawableLayer:
-                    id: drawable_layer
+                LayerStack:
+                    id: layer_stack
+
+
+<LayerStack>:
+    layer_list: self.layer_list
+    current_layer: self.current_layer
+
+<DrawTool>
+    layer: self.layer
+    pen_size: self.pen_size
+    layer_color: self.layer_color
 
 <DrawableLayer>:
-    col: self.col
+    mask_layer: mask_layer
+    mask_color: self.mask_color
     fbo: self.fbo
-    canvas.before:
-        Color:
-            rgba: root.col
+
+    bbox_layer: bbox_layer
+    bbox_color: self.bbox_color
+    bbox_thickness: self.bbox_thickness
+    bbox_top_right: self.bbox_top_right
+    bbox_bot_left: self.bbox_bot_left
+    bbox_bounds: self.bbox_bounds
+
+
+    Widget:
+        id: mask_layer
+        canvas.before:
+            Color:
+                rgba: root.mask_color
+
+    Widget:
+        id: bbox_layer
+        canvas.before:
+            Color:
+                rgba: root.bbox_color
+            Line:
+                width: root.bbox_thickness
+                rectangle: root.bbox_bounds
+
 
 <RightControlColumn>:
     image_queue: image_queue
