--- a/client/screens/common.kv
+++ b/client/screens/common.kv
@@ -77,3 +77,17 @@
             disabled: root.value <= root.min
             on_release:
                 root.value = round(max(root.value - root.step, root.min), root.decimal_places)
+
+<PaintWindow>
+    mask_layer: mask_layer
+    fbo: self.fbo
+    mask_color: self.mask_color
+    EffectWidget:
+        size: root.size
+        effects: [common.TransparentBlackEffect()]
+        Widget:
+            size: root.size
+            id: mask_layer
+            canvas:
+                Color:
+                    rgba: root.mask_color
