--- a/client/screens/test_annotator_screen.kv
+++ b/client/screens/test_annotator_screen.kv
@@ -5,7 +5,7 @@
 <InstanceAnnotatorScreen>:
     left_control: left_control
     right_control: right_control
-    image_canvas: image_canvas
+    tab_panel: tab_panel
     BoxLayout:
         orientation: "vertical"
         ActionBar:
@@ -21,11 +21,25 @@
             LeftControlColumn:
                 id: left_control
                 size_hint_x: 350 / root.width
-            ImageCanvas:
-                id: image_canvas
+            ImageCanvasTabPanel:
+                id: tab_panel
+
             RightControlColumn:
                 id: right_control
                 size_hint_x: 350 / root.width
+
+<ImageCanvasTabPanel>:
+    do_default_tab: False
+
+<TabbedPanelItem>:
+    image_canvas: image_canvas
+    halign: 'left'
+    valign: 'center'
+    text_size: self.size
+    padding: (10,0)
+    shorten: True
+    ImageCanvas:
+        id: image_canvas
 
 <LeftControlColumn>:
     tool_select: tool_select
