Major Refactor to Client (#49)
Refactors the Instance Annotator to follow a strict MVC pattern. GUI major operations are now run off the screen instance, with either the "background" or "mainthread" annotation to handle concurrency issues within kivy.

--- a/client/screens/project_tool_screen.kv
+++ b/client/screens/project_tool_screen.kv
@@ -29,4 +29,4 @@
                     on_release: app.show_image_viewer()
                 Button:
                     text: "Instance Annotator"
-                    on_release: app.open_instance_annotator()
+                    on_release: app.show_instance_annotator()
