Add draw operation to PaintWindow

--- a/client/data/common.kv
+++ b/client/data/common.kv
@@ -1,5 +1,6 @@
 #:import utils kivy.utils
 #:import ClientConfig client.client_config.ClientConfig
+#:import common client.screens.common
 
 <Alert>:
     size_hint: None, None
