Fix deadzones when scaling images

--- a/client/data/instance_annotator_screen.kv
+++ b/client/data/instance_annotator_screen.kv
@@ -220,6 +220,7 @@
     Scatter:
         id: scatter
         pos: (0,0)
+        size_hint: (None,None)
         ScrollView:
             scroll_type: ['bars', 'content']
             scroll_timeout: 5
