Seperate alpha of annotations from base image

--- a/client/data/paint_window.kv
+++ b/client/data/paint_window.kv
@@ -1,6 +1,13 @@
 <PaintWindow2>:
     image: image
-    Image:
-        id: image
-        size_hint: (None, None)
-        size: root.size
+    bg_image: bg_image
+    FloatLayout:
+        Image:
+            id: bg_image
+            size_hint: (None, None)
+            size: root.size
+        Image:
+            id: image
+            size_hint: (None, None)
+            size: root.size
+
