--- a/client/data/common.kv
+++ b/client/data/common.kv
@@ -1,5 +1,6 @@
 #:import utils kivy.utils
 #:import ClientConfig client.client_config.ClientConfig
+#:import common client.screens.common
 
 <Alert>:
     size_hint: None, None
@@ -75,13 +76,3 @@
             text: '-'
             disabled: root.value <= root.min
             on_release: root.increment(-1)
-
-<PaintWindow>
-    mask_layer: mask_layer
-    fbo: self.fbo
-    EffectWidget:
-        size: root.size
-        effects: [common.TransparentBlackEffect()]
-        Widget:
-            size: root.size
-            id: mask_layer
